[gd_scene load_steps=17 format=3 uid="uid://brq3hpeo30ybh"]

[ext_resource type="FontFile" uid="uid://cgesryr8t1odd" path="res://addons/Tiny swords/Resources/Resources/press-start-2p/PressStart2P-Regular.ttf" id="1_figvp"]
[ext_resource type="Script" path="res://titleScreen.gd" id="1_ij0s5"]
[ext_resource type="Texture2D" uid="uid://cnaihr2shum8o" path="res://Captura de tela de 2024-07-02 17-01-08.png" id="3_0dcb3"]
[ext_resource type="Texture2D" uid="uid://bwnplfdw0c6n4" path="res://addons/Tiny swords/UI/Banners/Banner_Horizontal.png" id="3_4edo3"]
[ext_resource type="Texture2D" uid="uid://5yikbdto8pex" path="res://addons/Tiny swords/UI/Banners/Carved_3Slides.png" id="4_psfss"]
[ext_resource type="Texture2D" uid="uid://dq12r6x7en8qt" path="res://addons/Tiny swords/UI/Ribbons/Ribbon_Blue_3Slides.png" id="6_sxxrq"]

[sub_resource type="Theme" id="Theme_d31af"]
Button/fonts/font = ExtResource("1_figvp")
Label/fonts/font = ExtResource("1_figvp")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_gs633"]
texture = ExtResource("3_0dcb3")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_qdwj1"]
texture = ExtResource("3_4edo3")
texture_margin_left = 32.0
texture_margin_top = 16.0
texture_margin_right = 32.0
texture_margin_bottom = 48.0
axis_stretch_horizontal = 2
axis_stretch_vertical = 2
region_rect = Rect2(32, 48, 128, 128)

[sub_resource type="Theme" id="Theme_bdqf6"]
Button/colors/font_focus_color = Color(0.796242, 0.796243, 0.796243, 1)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_bhsf8"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_5t8no"]

[sub_resource type="Theme" id="Theme_57wwt"]
Label/styles/normal = SubResource("StyleBoxTexture_bhsf8")
TextEdit/styles/normal = SubResource("StyleBoxEmpty_5t8no")

[sub_resource type="LabelSettings" id="LabelSettings_wv3jb"]
outline_size = 8
outline_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_s3skg"]
texture = ExtResource("6_sxxrq")
texture_margin_left = 64.0
texture_margin_right = 64.0
axis_stretch_horizontal = 1
region_rect = Rect2(0, 0, 192, 64)

[sub_resource type="LabelSettings" id="LabelSettings_ol3wf"]
font = ExtResource("1_figvp")
font_size = 35
outline_size = 8
outline_color = Color(0, 0, 0, 1)

[node name="titleScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_d31af")
script = ExtResource("1_ij0s5")

[node name="Panel2" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -170.0
offset_top = -199.0
offset_right = 237.0
offset_bottom = 30.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_gs633")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -328.5
offset_top = -171.0
offset_right = 328.5
offset_bottom = 205.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_styles/panel = SubResource("StyleBoxTexture_qdwj1")

[node name="Carved3Slides" type="Sprite2D" parent="Panel"]
position = Vector2(333.25, 169.25)
scale = Vector2(3.14844, 5.24219)
texture = ExtResource("4_psfss")

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -96.0
offset_top = -102.0
offset_right = 96.0
offset_bottom = 38.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_bdqf6")
theme_override_constants/separation = 16
alignment = 1

[node name="start" type="Button" parent="Panel/VBoxContainer" groups=["button"]]
layout_mode = 2
focus_mode = 0
theme = SubResource("Theme_57wwt")
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 8
theme_override_font_sizes/font_size = 24
text = "Start"
flat = true

[node name="options" type="Button" parent="Panel/VBoxContainer" groups=["button"]]
visible = false
layout_mode = 2
focus_mode = 0
theme = SubResource("Theme_57wwt")
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 8
theme_override_font_sizes/font_size = 24
text = "Options
"
flat = true

[node name="quit" type="Button" parent="Panel/VBoxContainer" groups=["button"]]
layout_mode = 2
focus_mode = 0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 8
theme_override_font_sizes/font_size = 24
text = "Quit"
flat = true

[node name="CheckButton" type="CheckButton" parent="Panel"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -120.0
offset_top = 84.0
offset_right = 120.0
offset_bottom = 108.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 8
theme_override_font_sizes/font_size = 16
text = "Mobile mode "

[node name="madeBy" type="HBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -166.0
offset_top = 32.0
offset_right = 166.0
offset_bottom = 72.0
grow_horizontal = 2
grow_vertical = 0

[node name="Label" type="Label" parent="Panel/madeBy"]
layout_mode = 2
text = "Made By "
label_settings = SubResource("LabelSettings_wv3jb")

[node name="Button" type="Button" parent="Panel/madeBy" groups=["button"]]
layout_mode = 2
focus_mode = 0
theme_override_colors/font_color = Color(1, 0.395754, 0.388937, 1)
theme_override_colors/font_pressed_color = Color(1, 0.545098, 0.521569, 1)
theme_override_colors/font_hover_color = Color(1, 0.396078, 0.388235, 1)
theme_override_colors/font_focus_color = Color(1, 0.545098, 0.521569, 1)
theme_override_colors/font_hover_pressed_color = Color(1, 0.545098, 0.521569, 1)
theme_override_colors/font_disabled_color = Color(1, 0.544111, 0.520998, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 8
theme_override_fonts/font = ExtResource("1_figvp")
theme_override_font_sizes/font_size = 16
text = "Alekssandher"
flat = true

[node name="topPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -225.5
offset_top = 33.0
offset_right = 225.5
offset_bottom = 142.0
grow_horizontal = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_s3skg")

[node name="Label" type="Label" parent="topPanel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -175.0
offset_top = 22.0
offset_right = 175.0
offset_bottom = 57.0
grow_horizontal = 2
text = "Tin Knight"
label_settings = SubResource("LabelSettings_ol3wf")

[connection signal="pressed" from="Panel/VBoxContainer/start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/quit" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="Panel/CheckButton" to="." method="_on_check_button_pressed"]
